src/pages/ProjectDetail/ProjectDetail.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;

.project-detail {
  padding: 0 2em;
  max-width: 100%;
  @include display-flex(flex, column, normal, flex-start);
  gap: 2em;
}

.project-image {
  width: 100%;
}

.project-hero {
  width: 100%;
  @include display-flex(flex, column, normal, flex-start);
  gap: 1em;
  &__text {
    width: 100%;
    @include display-flex(flex, row, space-between, baseline);
  }
  &__title {
    margin: 0;
  }
  &__link-group {
    @include display-flex(flex, row, space-between);
    gap: 2em;
  }
  &__link:hover {
    color: $color-primary-teal;
  }
  &__tag-group {
    @include display-flex(flex, row, normal, flex-start);
    gap: 0 1em;
    flex-wrap: wrap;
  }
  &__tag {
    margin: 0;
  }
}

.project-description-group {
  max-width: 100%;
  text-align: left;
  @include display-flex(flex, column, normal, flex-start);
  gap: 2em;
  padding-bottom: 5em;
  @include tablet {
    width: 75%;
  }
  @include desktop {
    width: 60%;
  }
}

// Dark mode Hero link style
html.theme-light .project-hero__link {
  color: $color-primary-blue;
}

